--- a/JS_04_BankIntrestManagement/index.html
+++ b/JS_04_BankIntrestManagement/index.html
@@ -19,33 +19,33 @@
            
             <tr>
                 <td id="name">Ares</td>
-                <td id="balance" ><input id="bal1" type="number"></td>
-                <td id="t1"><input id="int1" type="number" disabled></td>
+                <td id="balance" ><input class="balances" type="number"></td>
+                <td id="t1"><input id="int1" class="newBal" type="number" disabled></td>
             </tr>
 
             <tr>
               <td id="name">Jack</td>
-              <td id="balance"><input id='bal2' type="number"></td>
-              <td id="t2"><input id="int2" type="number" disabled></td>
+              <td id="balance"><input class="balances" type="number"></td>
+              <td id="t2"><input id="int2" class="newBal" type="number" disabled></td>
             </tr>
 
             <tr>
               <td id="name">Sins</td>
-              <td id="balance"><input id='bal3' type="number"></td>
-              <td id="t3"><input id="int3" type="number" disabled></td>
+              <td id="balance"><input class="balances" type="number"></td>
+              <td id="t3"><input id="int3" class="newBal" type="number" disabled></td>
             </tr>
 
             <tr>
                 <td id="name">Max</td>
-                <td id="balance"><input id='bal4'  type="number"></td>
-                <td id="t4"><input id="int4" type="number" disabled></td>
+                <td id="balance"><input class="balances"  type="number"></td>
+                <td id="t4"><input id="int4" class="newBal" type="number" disabled></td>
            </tr>
 
             <tr>
               
                 <td id="name">Zeus</td>
-                <td id="balance"><input id='bal5'  type="number"></td>
-                <td id="t5"><input id="int5" type="number" disabled></td>
+                <td id="balance"><input class="balances"  type="number"></td>
+                <td id="t5"><input id="int5" class="newBal" type="number" disabled></td>
             </tr>
 
         </table>
