--- a/YT-clone/index.html
+++ b/YT-clone/index.html
@@ -1,86 +1,357 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=0.6">
-        <title>YouTube Clone</title>
-        <link href="style.css" rel="stylesheet" type="text/css" />
-    </head>
-    <body>
-          <div class="wrapper">
-                <header>
-                    <div class="header__logo">
-                        <a href="#">
-                            <img src="icons\hamburger-menu.png" alt="" width="30" height="30" class="header__hamburger-logo">
-                        </a>
-                        <a href="#">
-                            <img src="" alt="" class="header__yt-logo">
-                        </a>
-                    </div>
 
-                    <div class="search">
-                        <form>
-                            <input type="text" name="search" id="search_input" placeholder="Search">
-                            <a href="">
-                                <img src="" alt="">
-                            </a>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-                        </form>
-                    </div>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.9.0/css/all.css"
+      integrity="sha384-i1LQnF23gykqWXg6jxC2ZbCbUMxyw5gLZY6UiUS98LYV5unm8GWmfkIS6jqJfb4E" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
 
-                    <div>
-                        <a href="">
-                            <img src="" alt="">
-                        </a>
+    <link rel="stylesheet" href="style.css" />
+    <title>Youtube clone</title>
+  </head>
 
-                        <a href="">
-                            <img src="" alt="">
-                        </a>
+  <body>
+    <!-- NAVIGATION -->
+    <nav class="nav-main">
+      <ul class="nav--list">
+        <ul class="nav--left">
+          <li>
+            <a href="#"><i class="fas fa-bars"></i></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/youtube-logo.png" alt="Youtube logo" /></a>
+          </li>
+        </ul>
 
-                        <a href="">
-                            <img src="" alt="">
-                        </a>
+        <ul class="nav--search">
+          <li>
+            <input class="input-search" type="text" name="Search" placeholder="Search" />
+            <button><i class="fas fa-search"></i></button>
+          </li>
+        </ul>
 
-                        <a href="">
-                            <img src="" alt="">
-                        </a>
-                    </div>
-                </header>
+        <ul class="nav--right">
+          <li>
+            <a href="#"><i class="fas fa-video"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fas fa-th"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fas fa-comment"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fas fa-bell"></i></a>
+          </li>
+          <li>
+            <a href="#"><img src="img/user-profile.jpg" alt="User Profile picture" /></a>
+          </li>
+        </ul>
+      </ul>
+    </nav>
 
-                <div class="main-wrapper">
-                    <div class="left">
-                        <main>
-                            <div class="main__video">
-                                <div class="main__video-container">
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_1lj6JaDKCA" frameborder="0" allow="accelerometer; autoplay; 
-                                        encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                                    </iframe>
-                                </div>
+    <!-- VIDEO SECTION -->
 
-                                <div class="main__sub-description">
-                                    <a href="">
-                                        <img class="main__name" src="" alt="">
-                                    </a>
+    <main>
+      <article>
+        <div class="video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/REhhKr6efTo" 
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <header>
+          <div class="video-stats">
+            <h1 class="video-title">
+              How to make Iced Latte ☆ アイスラテの作り方
+            </h1>
+            <p>2.601.131 Views</p>
+          </div>
 
-                                    <a href="">
-                                        <img class="main__subscriptions" src="" alt="">
-                                    </a>
-                                </div>
-                            </div>
+          <nav class="nav-video">
+            <a href="#"><i class="fas fa-thumbs-up"></i>71K</a>
+            <a href="#"><i class="fas fa-thumbs-down"></i>1.3K</a>
+            <a href="#"><i class="fas fa-share"></i>SHARE</a>
+            <a href="#"><i class="fas fa-list"></i>SAVE</a>
+            <a href="#"><i class="fas fa-ellipsis-h"></i></a>
+          </nav>
+        </header>
 
-                            <aside class="aside">
+        <section class="video-description">
+          <img src="img/user-profile.jpg" alt="User profile picture" />
 
-                                <div class="aside__top-container">
-                                    <p>Up Next</p>
-                                    <a href="#">AUTOPLAY</a>
-                                </div>
+          <div class="video-creator">
+            <h2>Peaceful Cuisine</h2>
 
-                            </aside>
-                        </main>
-                    </div>
-                </div>
+            <p class="published">Published 2 jul. 2015</p>
+
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt,
+              temporibus illum corporis expedita, veritatis unde modi
+              repellendus sint iure quibusdam natus. Rerum fuga placeat amet
+              ratione cum temporibus aliquam laudantium!
+            </p>
+
+            <a href="" class="showmore-btn">show more</a>
+          </div>
+
+          <a class="subscribe-btn">subscribe 2m</a>
+        </section>
+
+        <!-- VIDEO COMMENTS -->
+        <section class="video-comments">
+
+          <div class="comment__stats">
+            <p>554 Comments</p>
+            <a href="#"><i class="fas fa-align-left"></i> SORT BY</a>
 
           </div>
-    </body>
-    </html>
+
+          <div class="comment__box">
+            <a href="" class="comment__display"><img src="img/user-profile.jpg" alt="Profile picture"></a>
+            <input type="text" placeholder="Add a public comment">
+          </div>
+
+
+          <div class="comment">
+            <a class="comment__display" href="#"><img src="img/user-profile.jpg" alt="Profile picture"></a>
+            <div class="comment__details">
+              <h4 class="comment__author">John Doe <span>11 months ago</span></h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum labore dolore consequuntur eum nemo
+                ipsa. Magni aut assumenda dolores doloribus inventore, optio, nesciunt minima, repellendus praesentium
+                esse placeat sint officia.</p>
+              <div class="section__controls">
+                <a href="#"><i class="fas fa-thumbs-up"></i>132</a>
+                <a href="#"><i class="fas fa-thumbs-down"></i></a>
+                <a href="#">REPLY</a>
+              </div>
+              <a href="#">View 3 Replies <i class="fas fa-chevron-down chevron"></i></a>
+            </div>
+          </div>
+          <div class="comment">
+            <a class="comment__display" href="#"><img src="img/user-profile.jpg" alt="Profile picture"></a>
+            <div class="comment__details">
+              <h4 class="comment__author">John Doe <span>11 months ago</span></h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum labore dolore consequuntur eum nemo
+                ipsa. Magni aut assumenda dolores doloribus inventore, optio, nesciunt minima, repellendus praesentium
+                esse placeat sint officia.</p>
+              <div class="section__controls">
+                <a href="#"><i class="fas fa-thumbs-up"></i>132</a>
+                <a href="#"><i class="fas fa-thumbs-down"></i></a>
+                <a href="#">REPLY</a>
+              </div>
+              <a href="#">View 3 Replies <i class="fas fa-chevron-down chevron"></i></a>
+            </div>
+          </div>
+          <div class="comment">
+            <a class="comment__display" href="#"><img src="img/user-profile.jpg" alt="Profile picture"></a>
+            <div class="comment__details">
+              <h4 class="comment__author">John Doe <span>11 months ago</span></h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum labore dolore consequuntur eum nemo
+                ipsa. Magni aut assumenda dolores doloribus inventore, optio, nesciunt minima, repellendus praesentium
+                esse placeat sint officia.</p>
+              <div class="section__controls">
+                <a href="#"><i class="fas fa-thumbs-up"></i>132</a>
+                <a href="#"><i class="fas fa-thumbs-down"></i></a>
+                <a href="#">REPLY</a>
+              </div>
+              <a href="#">View 3 Replies <i class="fas fa-chevron-down chevron"></i></a>
+            </div>
+          </div>
+          <div class="comment">
+            <a class="comment__display" href="#"><img src="img/user-profile.jpg" alt="Profile picture"></a>
+            <div class="comment__details">
+              <h4 class="comment__author">John Doe <span>11 months ago</span></h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum labore dolore consequuntur eum nemo
+                ipsa. Magni aut assumenda dolores doloribus inventore, optio, nesciunt minima, repellendus praesentium
+                esse placeat sint officia.</p>
+              <div class="section__controls">
+                <a href="#"><i class="fas fa-thumbs-up"></i>132</a>
+                <a href="#"><i class="fas fa-thumbs-down"></i></a>
+                <a href="#">REPLY</a>
+              </div>
+              <a href="#">View 3 Replies <i class="fas fa-chevron-down chevron"></i></a>
+            </div>
+          </div>
+          <div class="comment">
+            <a class="comment__display" href="#"><img src="img/user-profile.jpg" alt="Profile picture"></a>
+            <div class="comment__details">
+              <h4 class="comment__author">John Doe <span>11 months ago</span></h4>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum labore dolore consequuntur eum nemo
+                ipsa. Magni aut assumenda dolores doloribus inventore, optio, nesciunt minima, repellendus praesentium
+                esse placeat sint officia.</p>
+              <div class="section__controls">
+                <a href="#"><i class="fas fa-thumbs-up"></i>132</a>
+                <a href="#"><i class="fas fa-thumbs-down"></i></a>
+                <a href="#">REPLY</a>
+              </div>
+              <a href="#">View 3 Replies <i class="fas fa-chevron-down chevron"></i></a>
+            </div>
+          </div>
+        </section>
+
+      </article>
+
+      <!-- VIDEO RECOMMENDATIONS -->
+      <aside>
+        <div class="video__controls">
+          <p>Up Next</p>
+          <div class="autoplay">
+            <i class="fas fa-toggle-on"></i>
+            <p>AUTOPLAY</p>
+          </div>
+        </div>
+
+        <div class="video__container">
+          <div class="video-box">
+            <img src="img/thumbnail.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+
+          <div class="video-box">
+            <img src="img/thumbnail-1.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+
+          <div class="video-box">
+            <img src="img/thumbnail-2.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+
+          <div class="video-box">
+            <img src="img/thumbnail-3.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+
+          <div class="video-box">
+            <img src="img/thumbnail-4.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+
+          <div class="video-box">
+            <img src="img/thumbnail-5.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+
+          <div class="video-box">
+            <img src="img/thumbnail-6.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+
+          <div class="video-box">
+            <img src="img/thumbnail-7.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+          <div class="video-box">
+            <img src="img/thumbnail-8.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+          <div class="video-box">
+            <img src="img/thumbnail-9.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+          <div class="video-box">
+            <img src="img/thumbnail-10.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+          <div class="video-box">
+            <img src="img/thumbnail-11.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+          <div class="video-box">
+            <img src="img/thumbnail-12.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+          <div class="video-box">
+            <img src="img/thumbnail-13.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+          <div class="video-box">
+            <img src="img/thumbnail-14.jpg" alt="Video thumbnail" class="video-box__thumbnail">
+            <div class="video-box__details">
+              <h3>'How to Get a Job at the Big 4 - Amazon, Facebook, Google & Microsoft' by
+                Sean Lee</h3>
+              <p>imtiana</p>
+              <p>969K views</p>
+            </div>
+          </div>
+
+        </div>
+      </aside>
+
+    </main>
+  </body>
+
+</html>
