--- a/YT-clone/index.html
+++ b/YT-clone/index.html
@@ -100,7 +100,7 @@
           <a class="subscribe-btn">subscribe 2m</a>
         </section>
 
-        <!-- VIDEO COMMENTS -->
+        <!-- Comments -->
         <section class="video-comments">
 
           <div class="comment__stats">
